entrypoint/wwwroot/css/site.css
:root {
  --font-family: 'Roboto, sans-serif';
  
  /* colors - each "darker" is 4% darker */
  --font-color: #000;
  --bg-color: hsl(300, 32.1%, 95%);
  --bg-color-darker: hsl(from var(--bg-color) h s calc(l - 4));
  --bg-color-darkest: hsl(from var(--bg-color) h s calc(l - 8));

  --accent-font-color: #000;
  --accent-color: hsl(250, 70%, 76%);
  --accent-color-darker: hsl(from var(--accent-color) h s calc(l - 4));

  --warning-color: hsl(355, 61%, 76%);
  --warning-darker: hsl(from var(--warning-color) h s calc(l - 4));
  
  --success-color: lightgreen;
  --success-darker: hsl(from var(--success-color) h s calc(l - 4));

  /* spacing - each level should double */
  --extra-small: 5px;
  --small: 10px;
  --medium: 20px;
  --large: 40px;
  --extra-large: 80px;
  
  --border-radius: 5px;
}

body {
  margin: 0 0 var(--large) 0;
  color: var(--font-color);
  background-color: var(--bg-color);
  font-family: var(--font-family);
}

h1 {
  margin: var(--extra-large) 0 0 0;
}

h2 {
  margin: var(--large) 0 0 0;
}

h3 {
  margin: var(--medium) 0 0 0;
}

hr {
  margin: var(--medium) 0;
  color: var(--bg-color-darker);
}

main {
  width: 80%;
  margin: auto;
}

dialog {
  padding: var(--medium) var(--extra-large);
  border-radius: var(--border-radius);
  border: solid 2px var(--bg-color-darkest);
  box-shadow: 0 var(--medium) var(--large) var(--bg-color-darkest);
}

a {
  text-decoration: none;
  color: var(--font-color);
}

a:hover {
  text-decoration: underline;  
}

button, select, input, textarea {
  background-color: var(--bg-color);
  border: 3px solid var(--bg-color-darker);
  text-decoration: none;
}

button:hover, select:hover, input:hover, textarea:hover {
  background-color: var(--bg-color-darker);
  border-color: var(--bg-color-darkest);
}

button:hover, select:hover {
  text-decoration: underline;  
}

button {
  border-radius: var(--border-radius);
  padding: var(--small) var(--medium);
  font-size: large;
}

select, input, textarea {
  border-radius: var(--border-radius);
  margin: var(--small) 0;
  padding: var(--extra-small) var(--small);
}

textarea {
  font-family: var(--font-family);
  padding: var(--extra-small) var(--small);
  margin: var(--small) 0;
  resize: vertical;
  width: 100%;
}

table {
  width: 100%;
}

td {
  background-color: var(--bg-color-darker);
  border: 2px solid var(--bg-color-darkest);
  padding: var(--small);
  border-radius: var(--border-radius);
}

.primary {
  color: var(--accent-font-color);
  background-color: var(--accent-color);
}

.primary:hover {
  background-color: var(--accent-color-darker);
}

.warning {
  background-color: var(--warning-color);
}

.warning:hover {
  background-color: var(--warning-darker);
}

svg {
  fill: var(--font-color)
}

.nav-container {
  background-color: var(--accent-color);

  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  /*border-bottom: solid 2px var(--bg-color-darkest);*/
  box-shadow: 0 var(--extra-small) var(--small) var(--bg-color-darker);
}

.nav-icon-container {
  display: flex;
  flex-direction: row;
  align-items: center;  
}

.nav-item {
  color: var(--accent-font-color);
  padding: var(--medium);
  display: flex;
  align-items: center;
}
.nav-item:hover {
  background-color: var(--accent-color-darker );
}

.underlined {
  text-decoration: underline;
}

